--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="red">#F60909</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primery">#9751B5</color>
+    <color name="grey">#DEDFDF</color>
 </resources>
