--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:background="@color/primery"
         android:textColor="@color/white"
         android:layout_marginTop="15dp"
+        android:onClick="submitData"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:text="Submit"
@@ -32,6 +33,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
